[workspace]
members = [
    "stepflow-mapping",
    "stepflow-engine",
    "stepflow-dsl",
    "stepflow-sqlite",
    "stepflow-storage", 
    "stepflow-hook", 
    "stepflow-gateway", 
    "stepflow-match", 
    "stepflow-tool", 
    "stepflow-dto", 
    "stepflow-worker",
    "stepflow-postgres", 
    "stepflow-eventbus", 
    "stepflow-frb-api",
]
resolver = "2"

[workspace.dependencies]
serde = "1"
serde_json = "1"
