[workspace]
members = [
    "stepflow-mapping",
    "stepflow-engine",
    "stepflow-dsl",
    "stepflow-sqlite",
    "stepflow-storage", 
    "stepflow-hook", 
    "stepflow-gateway", 
    "stepflow-match", 
    "stepflow-tool", 
    "stepflow-dto", 
    "stepflow-worker",
    "stepflow-postgres", 
    "stepflow-eventbus", 
    "stepflow-frb-api", 
    "stepflow-core", "stepflow-common", "stepflow-cli", "stepflow-exception", "stepflow-auth",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.7", features = ["ws", "macros"] }
base64 = "0.21"
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
env_logger = "0.11.8"
futures = "0.3"
futures-core = "0.3"
http = "1.1"
jsonpath_lib = "0.3"
log = "0.4"
once_cell = "1.17"
prometheus = "0.14"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sqlx = { version = "0.7", features = ["sqlite", "postgres", "runtime-tokio", "runtime-tokio-rustls", "macros", "chrono", "uuid", "json"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
utoipa = { version = "4.2.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
wiremock = "0.5"
tempfile = "3.2"
flutter_rust_bridge = "=2.9.0"
flutter_rust_bridge_macros = "=2.9.0"