[package]
name = "stepflow-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
thiserror.workspace = true
sqlx.workspace = true
anyhow.workspace = true
prometheus.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

stepflow-dto = { path = "../stepflow-dto" }
stepflow-common = { path = "../stepflow-common" }
stepflow-engine = { path = "../stepflow-engine" }
stepflow-match = { path = "../stepflow-match" }
stepflow-storage = { path = "../stepflow-storage" }
stepflow-hook = { path = "../stepflow-hook" }
stepflow-eventbus = { path = "../stepflow-eventbus" }
stepflow-sqlite = { path = "../stepflow-sqlite" }