[package]
name = "stepflow-dsl"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
stepflow-dto = { path = "../stepflow-dto" }
stepflow-mapping = { path = "../stepflow-mapping" }
thiserror = "1.0"

[dev-dependencies]
serde_yaml = "0.9"