[package]
name = "stepflow-dsl"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

stepflow-dto = { path = "../stepflow-dto" }
stepflow-mapping = { path = "../stepflow-mapping" }

[dev-dependencies]
serde_yaml.workspace = true