[package]
name = "stepflow-dto"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
http.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
uuid.workspace = true
reqwest.workspace = true

stepflow-storage = { path = "../stepflow-storage" }