[package]
name = "stepflow-dto"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
utoipa.workspace = true
thiserror.workspace = true
async-trait.workspace = true
chrono.workspace = true
uuid.workspace = true

stepflow-storage = { path = "../stepflow-storage" }