[package]
name = "stepflow-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
jsonpath_lib = "0.3"
stepflow-dsl = { path = "../stepflow-dsl" }
stepflow-mapping = { path = "../stepflow-mapping" }
log = "0.4.27"
warp = "0.3"
reqwest = { version = "0.11", features = ["json"] }
env_logger = "0.10"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "macros", "chrono", "uuid", "json"] }

[features]
default = ["memory_stub"]
memory_stub = []


[dev-dependencies]
anyhow = "1.0"
once_cell = "1.17"


[[bin]]
name = "engine-server"
path = "src/server.rs"

[[bin]]
name = "worker"
path = "src/worker.rs"
