[package]
name = "stepflow-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
stepflow-dsl = { path = "../stepflow-dsl" }
stepflow-storage = { path = "../stepflow-storage" }
stepflow-sqlite = { path = "../stepflow-sqlite" }
stepflow-mapping = { path = "../stepflow-mapping" }
stepflow-hook = { path = "../stepflow-hook" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
jsonpath_lib = "0.3"
warp = "0.3"
reqwest = { version = "0.11", features = ["json"] }
env_logger = "0.11.8"
futures = "0.3.31"
bytes = "1.5"

[features]
default = ["memory_stub"]
memory_stub = []


[dev-dependencies]
anyhow = "1.0"
once_cell = "1.17"


# [[bin]]
# name = "engine-server"
# path = "src/server.rs"

# [[bin]]
# name = "worker"
# path = "src/worker.rs"
