[package]
name = "stepflow-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
log.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true
jsonpath_lib.workspace = true
reqwest.workspace = true
bytes.workspace = true
thiserror.workspace = true

stepflow-dsl = { path = "../stepflow-dsl" }
stepflow-dto = { path = "../stepflow-dto" }
stepflow-storage = { path = "../stepflow-storage" }
stepflow-mapping = { path = "../stepflow-mapping" }
stepflow-hook = { path = "../stepflow-hook" }
stepflow-match = { path = "../stepflow-match" }
stepflow-tool = { path = "../stepflow-tool" }

[features]
default = ["memory_stub"]
memory_stub = []

[dev-dependencies]
anyhow.workspace = true
once_cell.workspace = true
serde_yaml.workspace = true