[package]
name = "stepflow-frb-api"
version = "0.1.0"
edition = "2024"

[lib]
name = "stepflow_frb_api"
crate-type = ["cdylib"]

[dependencies]
flutter_rust_bridge = "=2.9.0"
flutter_rust_bridge_macros  = "=2.9.0" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.0"
sqlx = { version = "0.7", features = ["sqlite"] }
tokio = { version = "1.0", features = ["full"] }
prometheus = "0.14" 
tokio-stream = { version = "0.1", features = ["sync"] }
futures-core = "0.3"
stepflow-dto = { path = "../stepflow-dto" }
stepflow-eventbus = { path = "../stepflow-eventbus" }
stepflow-gateway = { path = "../stepflow-gateway" }
stepflow-sqlite = { path = "../stepflow-sqlite" }
stepflow-storage = { path = "../stepflow-storage" }
stepflow-match = { path = "../stepflow-match" }
stepflow-hook = { path = "../stepflow-hook" }
stepflow-engine = { path = "../stepflow-engine" }
