[package]
name = "stepflow-frb-api"
version = "0.1.0"
edition = "2024"

[lib]
name = "stepflow_frb_api"
crate-type = ["cdylib"]

[dependencies]
flutter_rust_bridge.workspace = true
flutter_rust_bridge_macros.workspace = true
serde.workspace = true
serde_json.workspace = true
once_cell.workspace = true
sqlx.workspace = true
tokio.workspace = true
prometheus.workspace = true
tracing.workspace = true
tokio-stream.workspace = true
futures-core.workspace = true
anyhow.workspace = true

stepflow-dto = { path = "../stepflow-dto" }
stepflow-eventbus = { path = "../stepflow-eventbus" }
stepflow-gateway = { path = "../stepflow-gateway" }
stepflow-sqlite = { path = "../stepflow-sqlite" }
stepflow-storage = { path = "../stepflow-storage" }
stepflow-match = { path = "../stepflow-match" }
stepflow-hook = { path = "../stepflow-hook" }
stepflow-engine = { path = "../stepflow-engine" }
stepflow-core = { path = "../stepflow-core" }
stepflow-common = { path = "../stepflow-common" }
stepflow-worker = { path = "../stepflow-worker" }