[package]
name = "stepflow-gateway"
version = "0.1.0"
edition = "2024"
default-run = "stepflow-gateway"

[dependencies]
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
http.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
sqlx.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
uuid.workspace = true
reqwest.workspace = true
futures.workspace = true
prometheus.workspace = true

stepflow-dto = { path = "../stepflow-dto" }
stepflow-dsl = { path = "../stepflow-dsl" }
stepflow-engine = { path = "../stepflow-engine" }
stepflow-match = { path = "../stepflow-match" }
stepflow-storage = { path = "../stepflow-storage" }
stepflow-sqlite = { path = "../stepflow-sqlite" }
stepflow-hook = { path = "../stepflow-hook" }
stepflow-eventbus = { path = "../stepflow-eventbus" }
stepflow-core = { path = "../stepflow-core" }
stepflow-common = { path = "../stepflow-common" }
stepflow-worker = { path = "../stepflow-worker" }
stepflow-tool = { path = "../stepflow-tool" }