[package]
name = "stepflow-hook"
version = "0.1.0"
edition = "2024"

[dependencies]
stepflow-dto = { path = "../stepflow-dto" }
stepflow-sqlite = { path = "../stepflow-sqlite" }
stepflow-storage = { path = "../stepflow-storage" }
stepflow-eventbus = { path = "../stepflow-eventbus" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prometheus = "0.14"

tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
chrono = "0.4"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
tracing = "0.1"