[package]
name = "stepflow-hook"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
serde_json.workspace = true
prometheus.workspace = true
tokio.workspace = true
async-trait.workspace = true
chrono.workspace = true
sqlx.workspace = true
tracing.workspace = true

stepflow-dto = { path = "../stepflow-dto" }
stepflow-storage = { path = "../stepflow-storage" }
stepflow-eventbus = { path = "../stepflow-eventbus" }