[package]
name = "stepflow-mapping"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
jsonpath_lib = "0.3"
rhai         = { version = "1", features = ["serde"], optional = true }
tera         = { version = "1", optional = true }
thiserror = "1"

[features]
default = ["expr", "template"]
expr    = ["rhai"]
template = ["tera"]