[package]
name = "stepflow-mapping"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
jsonpath_lib.workspace = true
thiserror.workspace = true

rhai = { version = "1", features = ["serde"], optional = true }
tera = { version = "1", optional = true }

[features]
default = ["expr", "template"]
expr = ["rhai"]
template = ["tera"]