[package]
name = "stepflow-match"
version = "0.1.0"
edition = "2024"

[dependencies]
stepflow-storage = { path = "../stepflow-storage" }
stepflow-dto = { path = "../stepflow-dto" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
jsonpath_lib = "0.3"
warp = "0.3"
thiserror = "1.0"
