[package]
name = "stepflow-match"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
log.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true
jsonpath_lib.workspace = true
warp.workspace = true
thiserror.workspace = true

stepflow-storage = { path = "../stepflow-storage" }
stepflow-dto = { path = "../stepflow-dto" }
stepflow-eventbus = { path = "../stepflow-eventbus" }