[package]
name = "stepflow-postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

stepflow-storage = { path = "../stepflow-storage" }