[package]
name = "stepflow-sqlite"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "macros", "chrono", "uuid", "json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
anyhow = "1.0"
once_cell = "1.17"
