[package]
name = "stepflow-sqlite"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tracing.workspace = true
anyhow.workspace = true
once_cell.workspace = true

stepflow-storage = { path = "../stepflow-storage" }