[package]
name = "stepflow-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
stepflow-sqlite = { path = "../stepflow-sqlite" }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.88"


[dev-dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
once_cell = "1.17"
