[package]
name = "stepflow-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json.workspace = true
chrono.workspace = true
sqlx.workspace = true
serde.workspace = true
async-trait.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
anyhow.workspace = true
once_cell.workspace = true

[features]
sqlite   = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
mysql    = ["sqlx/mysql"]
default  = ["sqlite"]