[package]
name = "stepflow-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
stepflow-dto = { path = "../stepflow-dto" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.17"
[dev-dependencies]
wiremock = "0.5"
tempfile = "3.2"