[package]
name = "stepflow-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
anyhow.workspace = true
thiserror.workspace = true
once_cell.workspace = true
tracing.workspace = true

stepflow-dto = { path = "../stepflow-dto" }

[dev-dependencies]
wiremock.workspace = true
tempfile.workspace = true