[package]
name = "stepflow-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
stepflow-tool = { path = "../stepflow-tool" }
stepflow-dto = { path = "../stepflow-dto" }
stepflow-eventbus = { path = "../stepflow-eventbus" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
uuid = "1.12"